--- a/src/main/resources/templates/about-en.html
+++ b/src/main/resources/templates/about-en.html
@@ -9,6 +9,22 @@
 <body>
 <link th:replace="fragments/fragment :: header">
 
+<section id="about">
+  <img src="img/about.jpeg">
+
+  <div id="about-content">
+    <h4>J&F INDUSTRIES INTERNATIONAL CO., LTD WAS ESTABLISHED IN 2008 <br>
+      WE HAVE BEEN AN EXPERT IN THE FIELD OF DESIGN, MANUFACTURE AND INSTALLATION OF RACKING SYSTEMS FOR MANY YEARS.</h4><br>
+    <p>
+      For customers who have needed to design the most efficient racking system, <br>
+      we can provide you with the most completed solutions to increase the efficiency of space use, <br>
+      at the same time, reduces capital prices for storage and transportation cost and also <br>
+      improve market competitiveness in both home and foreign markets.<br>
+    </p>
+  </div>
+
+</section>
+
 <link th:replace="fragments/fragment :: footer">
 </body>
 </html>
