--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -7,11 +7,11 @@
 <div th:fragment="header">
     <header>
     <div id="name">
-        <img src="img/logo.png" alt="logo" id="logo">
-        <h2 id="name">J&F Industries International Co., Ltd</h2>
+        <a href="/"><img src="img/logo.png" alt="logo" id="logo"></a>
+        <h2>J&F Industries International Co., Ltd</h2>
     </div>
     <div class='nav' id="lang">
-        <li><a href="#">English</a></li>
+        <li><a href="/">English</a></li>
         <li><a href="#">Vietnamese</a></li>
     </div>
     </header>
@@ -48,9 +48,9 @@
 
     <div class ="footer" id="company">
         <h3>Company</h3>
-        <li><a href="about-en.html">About</a></li><br>
-        <li><a href="products-en.html">Products</a></li><br>
-        <li><a href="contact-en.html">Contact</a></li>
+        <li><a href="about-en">About</a></li><br>
+        <li><a href="products-en">Products</a></li><br>
+        <li><a href="contact-en">Contact</a></li>
     </div>
 
 </footer>
