--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -7,7 +7,7 @@
 }
 
 button{
-    color: black;
+    color: white;
     background-position: center;
     background-size: 100%;
     height: 300px;
@@ -17,51 +17,69 @@ button{
     padding:90px;
     text-align: center;
     font-family: sans-serif;
-    font-size: 45px;
+    font-size: 48px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
   }
 
 button:hover, button:focus{
   opacity: 0.8;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
   font-weight: bolder;
 }
 
   #item_selective{
-    background-image: url("selective.jpg");
+    background-image: url("../img/selective.jpg");
   }
 
   #item_drivein{
-    background-image: url("drivein.jpg");
+    background-image: url("../img/drivein.jpg");
   }
 
   #item_narrowaisle{
-    background-image: url("narrowaisle.jpg");
+    background-image: url("../img/narrowaisle.jpg");
   }
 
   #item_pushback{
-    background-image: url("pushback.jpg");
+    background-image: url("../img/pushback.jpg");
   }
 
   #item_shuttle{
-    background-image: url("shuttle.jpg");
+    background-image: url("../img/shuttle.jpg");
   }
 
   #item_doubledeep{
-    background-image: url("doubledeep.jpg");
+    background-image: url("../img/doubledeep.jpg");
   }
 
   #item_asrs{
-    background-image: url("asrs.jpg");
+    background-image: url("../img/asrs.jpg");
   }
 
   #item_cantilever{
-    background-image: url("cantilever.jpg");
+    background-image: url("../img/cantilever.jpg");
   }
 
   #item_boltless{
-    background-image: url("boltless.jpg");
+    background-image: url("../img/boltless.jpg");
   }
 
   #item_mobileshelving{
-    background-image: url("mobileshelving.jpg");
+    background-image: url("../img/mobileshelving.jpg");
   }
+
+#item_mezzanine{
+    background-image: url("../img/mezzanine.jpg");
+}
+
+#item_platform{
+    background-image: url("../img/platform.jpg");
+}
+
+#item_mobile{
+    background-image: url("../img/mobile.jpg");
+}
+
+#item_livestorage{
+    background-image: url("../img/livestorage.jpg");
+}
