--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <div class="quote">
       <h1>J&F Industries International Co., Ltd</h1><br>
       <p>Our company designs, manufactures and installs all types of racks for warehouses, hypermarkets. <a id="a1">Want to see more of our products?</a></p>
-      <br><button type="submit"id="seemore">See More</button>
+      <br><a href="products-en"><button type="submit"id="seemore">See More</button></a>
     </div>
  </section>
 
