--- a/src/main/resources/templates/about-en.html
+++ b/src/main/resources/templates/about-en.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <title>About</title>
-  <link th:replace="fragments/fragment :: style-css">
+  <link th:replace="fragments/fragment-en :: style-css">
   <link rel="stylesheet" th:href="@{/css/website.css}">
 </head>
 
 <body>
-<link th:replace="fragments/fragment :: header">
+<link th:replace="fragments/fragment-en :: header">
 
 <section id="about">
   <img src="img/about.jpeg">
@@ -25,6 +25,6 @@
 
 </section>
 
-<link th:replace="fragments/fragment :: footer">
+<link th:replace="fragments/fragment-en :: footer">
 </body>
 </html>
