--- a/src/main/resources/templates/contact-en.html
+++ b/src/main/resources/templates/contact-en.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <title>Contact</title>
-  <link th:replace="fragments/fragment :: style-css">
+  <link th:replace="fragments/fragment-en :: style-css">
   <link rel="stylesheet" th:href="@{/css/website.css}">
 </head>
 
 <body>
-<link th:replace="fragments/fragment :: header">
+<link th:replace="fragments/fragment-en :: header">
 
 <section>
   <div>
@@ -25,11 +25,11 @@
   </form>
 
   <div>
-    <h2>Contact Details</h2><br>
+    <h2>Contact Details</h2><br><br>
       <h4>J&F Industries International Co., Ltd</h4><br>
-    <h2>Address</h2>
+    <h3>Address</h3>
       <p>C2-18, Da Den Industrial Zone, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam</p><br>
-    <h2>Contact Us</h2>
+    <h3>Contact Us</h3>
       <p>Tel: +84-274-3624200</p>
       <p>Mr. Liu: +84-946-766866</p>
       <p>Ms. Wang: +84-946-766889</p>
@@ -38,6 +38,6 @@
   </div>
 </section>
 
-<link th:replace="fragments/fragment :: footer">
+<link th:replace="fragments/fragment-en :: footer">
 </body>
 </html>
