--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -12,7 +12,7 @@
     </div>
     <div class='nav' id="lang">
         <li><a href="/">English</a></li>
-        <li><a href="#">Vietnamese</a></li>
+        <li><a href="home-vn">Vietnamese</a></li>
     </div>
     </header>
 
@@ -42,12 +42,12 @@
     <div class="footer">
         <h3>Address</h3>
         <p>
-            Address: C2-18, Da Den Industrial Zone, <br>Thu Dau Mot City, <br>Binh Duong Province, Viet Nam
+            Address: C2-18, Da Den Industrial Zone, <br>Phu Tan Ward, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam
         </p>
     </div>
 
     <div class ="footer" id="company">
-        <h3>Company</h3>
+        <h3>Company</h3><br>
         <li><a href="about-en">About</a></li><br>
         <li><a href="products-en">Products</a></li><br>
         <li><a href="contact-en">Contact</a></li>
