--- a/src/main/resources/templates/products-en.html
+++ b/src/main/resources/templates/products-en.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <title>Products</title>
-  <link th:replace="fragments/fragment :: style-css">
+  <link th:replace="fragments/fragment-en :: style-css">
   <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
 
 <body>
-<link th:replace="fragments/fragment :: header">
+<link th:replace="fragments/fragment-en :: header">
 
 <section class="products">
   <div>
@@ -30,6 +30,6 @@
   </div>
 </section>
 
-<link th:replace="fragments/fragment :: footer">
+<link th:replace="fragments/fragment-en :: footer">
 </body>
 </html>
