--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -24,8 +24,8 @@ button{
 
 button:hover, button:focus{
   opacity: 0.8;
-  /*text-decoration: underline;*/
   font-weight: bolder;
+    -webkit-text-stroke-width: 2px;
 }
 
   #item_selective{
