--- a/src/main/resources/templates/index-en.html
+++ b/src/main/resources/templates/index-en.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <title>Home</title>
-  <link th:replace="fragments/fragment :: style-css">
+  <link th:replace="fragments/fragment-en :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
 </head>
 
 <body>
-<link th:replace="fragments/fragment :: header">
+<link th:replace="fragments/fragment-en :: header">
   <section id="home">
     <div class="quote">
       <h1>J&F Industries International Co., Ltd</h1><br>
@@ -16,6 +16,6 @@
     </div>
  </section>
 
-<link th:replace="fragments/fragment :: footer">
+<link th:replace="fragments/fragment-en :: footer">
 </body>
 </html>
