organised html pages

--- a/src/main/resources/templates/vn/about-vn.html
+++ b/src/main/resources/templates/vn/about-vn.html
@@ -14,7 +14,7 @@
 
   <div id="about-content">
     <h4>CÔNG TY TNHH QUỐC TẾ J&F ĐƯỢC THÀNH LẬP VÀO NĂM 2008 <br>
-      CHÚNG TÔI ĐÃ LÀ CHUYÊN GIA TRONG LĨNH VỰC THIẾT KẾ, SẢN XUẤT, LẮP ĐẶT HỆ THỐNG KỆ TRỮ HÀNG ĐƯỢC RẤT NHIỀU NĂM.</h4><br>
+      CHÚNG TÔI LÀ CHUYÊN GIA TRONG LĨNH VỰC THIẾT KẾ, SẢN XUẤT, LẮP ĐẶT HỆ THỐNG KỆ TRỮ HÀNG ĐƯỢC RẤT NHIỀU NĂM.</h4><br>
     <p>
       Đối với khách hàng có nhu cầu thiết kế hệ thống kho chứa hàng sao cho hiệu quả, tiết kiệm nhất, <br>
       chúng tôi có thể cung cấp cho quý khách hàng những giải pháp hoàn mỹ nhất, mang lại hiệu quả tốt nhất trong việc tiết kiệm không gian và thời gian, <br>
