--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -7,6 +7,9 @@
 }
 
 button{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
     color: white;
     background-position: center;
     background-size: 100%;
@@ -14,7 +17,7 @@ button{
     width: 1000px;
     border: none;
     border-radius: 20px;
-    padding:90px;
+    align-items: center;
     text-align: center;
     font-family: sans-serif;
     font-size: 48px;
