--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -12,7 +12,9 @@
 <section class="products">
   <div>
     <ul class = "items">
-      <button id="item_selective">Selective Racking Systems</button><br>
+      <a href="selective">
+        <button id="item_selective">Selective Racking Systems</button>
+      </a><br>
       <button id="item_drivein">Drive-in Racking Systems</button><br>
       <button id="item_narrowaisle">Very Narrow Aisle Racking Systems</button><br>
       <button id="item_pushback">Push Back Racking Systems</button><br>
