--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -12,7 +12,9 @@
 <section class="products">
   <div>
     <ul class = "items">
-      <button id="item_selective">Kệ trữ hàng dạng điều chỉnh</button><br>
+      <a href="selective">
+        <button id="item_selective">Kệ trữ hàng dạng điều chỉnh</button>
+      </a><br>
       <button id="item_drivein">Kệ trữ hàng dạng xuyên suốt</button><br>
       <button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button><br>
       <button id="item_pushback">Kệ trữ hàng dạng đẩy từ phía sau</button><br>
