--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -15,7 +15,8 @@
       <a href="selective">
         <button id="item_selective">Kệ trữ hàng dạng điều chỉnh</button>
       </a><br>
-      <button id="item_drivein">Kệ trữ hàng dạng xuyên suốt</button><br>
+      <a href="drivein"><button id="item_drivein">Kệ trữ hàng dạng xuyên suốt</button>
+      </a><br>
       <button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button><br>
       <button id="item_pushback">Kệ trữ hàng dạng đẩy từ phía sau</button><br>
       <button id="item_livestorage">Kệ trữ hàng có ba lết dạng trượt</button><br>
