live storage done

--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -84,7 +84,7 @@ button:hover, button:focus{
 }
 
 #item_livestorage{
-    background-image: url("../img/livestorage.jpg");
+    background-image: url("../img/livestorage/livestorage.JPG");
 }
 
 .wrapper h1{
