--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -18,9 +18,11 @@
       <a href="drivein">
         <button id="item_drivein">Drive-in Racking Systems</button>
       </a><br>
-      <button id="item_narrowaisle">Very Narrow Aisle Racking Systems</button><br>
+      <a href="narrowaisle"><button id="item_narrowaisle">Very Narrow Aisle Racking Systems</button>
+      </a><br>
       <button id="item_pushback">Push Back Racking Systems</button><br>
-      <button id="item_livestorage">Live Storage Racking Systems</button><br>
+      <a href="livestorage"><button id="item_livestorage">Live Storage Racking Systems</button>
+      </a><br>
       <button id="item_shuttle">Shuttle Racking Systems</button><br>
       <button id="item_doubledeep">Double Deep Racking Systems</button><br>
       <button id="item_asrs">AS/RS Racking Systems</button><br>
