--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -17,9 +17,12 @@
       </a><br>
       <a href="drivein"><button id="item_drivein">Kệ trữ hàng dạng xuyên suốt</button>
       </a><br>
-      <button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button><br>
+      <a href="narrowaisle"><button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button>
+      </a><br>
       <button id="item_pushback">Kệ trữ hàng dạng đẩy từ phía sau</button><br>
-      <button id="item_livestorage">Kệ trữ hàng có ba lết dạng trượt</button><br>
+      <a href="livestorage">
+        <button id="item_livestorage">Kệ trữ hàng có ba lết dạng trượt</button>
+      </a><br>
       <button id="item_shuttle">Kệ trữ hàng dạng shuttle</button><br>
       <button id="item_doubledeep">Kệ trữ hàng dạng ba lết đôi</button><br>
       <button id="item_asrs">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</button><br>
