narrow aisle done 2

--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -40,7 +40,7 @@ button:hover, button:focus{
   }
 
   #item_narrowaisle{
-    background-image: url("../img/narrowaisle.jpg");
+    background-image: url("../img/narrowaisle/narrowaisle.JPG");
   }
 
   #item_pushback{
