--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -44,7 +44,7 @@ button:hover, button:focus{
   }
 
   #item_pushback{
-    background-image: url("../img/pushback.jpg");
+    background-image: url("../img/pushback/pushback.JPG");
   }
 
   #item_shuttle{
