--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -20,7 +20,8 @@
       </a><br>
       <a href="narrowaisle"><button id="item_narrowaisle">Very Narrow Aisle Racking Systems</button>
       </a><br>
-      <button id="item_pushback">Push Back Racking Systems</button><br>
+      <a href="pushback"><button id="item_pushback">Push Back Racking Systems</button>
+      </a><br>
       <a href="livestorage"><button id="item_livestorage">Live Storage Racking Systems</button>
       </a><br>
       <button id="item_shuttle">Shuttle Racking Systems</button><br>
