--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -19,7 +19,9 @@
       </a><br>
       <a href="narrowaisle"><button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button>
       </a><br>
-      <button id="item_pushback">Kệ trữ hàng dạng đẩy từ phía sau</button><br>
+      <a href="pushback">
+        <button id="item_pushback">Kệ trữ hàng dạng đẩy từ phía sau</button>
+      </a><br>
       <a href="livestorage">
         <button id="item_livestorage">Kệ trữ hàng có ba lết dạng trượt</button>
       </a><br>
