shuttle pictures done

--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -48,7 +48,7 @@ button:hover, button:focus{
   }
 
   #item_shuttle{
-    background-image: url("../img/shuttle.jpg");
+    background-image: url("../img/shuttle/shuttle.jpg");
   }
 
   #item_doubledeep{
