--- a/src/main/resources/templates/products/shuttle.html
+++ b/src/main/resources/templates/products/shuttle.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Live Storage Racking System</title>
+    <title>Shuttle Racking System</title>
     <link th:replace="fragments/fragment-en :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
@@ -10,12 +10,12 @@
 <link th:replace="fragments/fragment-en :: header">
 
 <div class="wrapper">
-    <h1>Live Storage Racking System</h1>
-    <h1>Kệ trữ hàng có ba lết dạng trượt</h1>
+    <h1>Shuttle Racking System</h1>
+    <h1>Kệ trữ hàng dạng shuttle</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/livestorage/livestorage.jpg" alt=""></div>
-        <div class="single-img"><img src="img/livestorage/livestorage2.jpg" alt=""></div>
+        <div class="single-img"><img src="img/shuttle/shuttle.jpg" alt=""></div>
+        <div class="single-img"><img src="img/shuttle/shuttle1.jpg" alt=""></div>
     </div>
 </div>
 
