--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -25,7 +25,8 @@
       <a href="livestorage">
         <button id="item_livestorage">Kệ trữ hàng có ba lết dạng trượt</button>
       </a><br>
-      <button id="item_shuttle">Kệ trữ hàng dạng shuttle</button><br>
+      <a href="shuttle"><button id="item_shuttle">Kệ trữ hàng dạng shuttle</button>
+      </a><br>
       <button id="item_doubledeep">Kệ trữ hàng dạng ba lết đôi</button><br>
       <button id="item_asrs">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</button><br>
       <button id="item_cantilever">Kệ trữ hàng dạng khuỷu tay</button><br>
