--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -24,7 +24,9 @@
       </a><br>
       <a href="livestorage"><button id="item_livestorage">Live Storage Racking Systems</button>
       </a><br>
-      <button id="item_shuttle">Shuttle Racking Systems</button><br>
+      <a href="shuttle">
+        <button id="item_shuttle">Shuttle Racking Systems</button>
+      </a><br>
       <button id="item_doubledeep">Double Deep Racking Systems</button><br>
       <button id="item_asrs">AS/RS Racking Systems</button><br>
       <button id="item_cantilever">Cantilever Racking Systems</button><br>
