double deep done

--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -52,7 +52,7 @@ button:hover, button:focus{
   }
 
   #item_doubledeep{
-    background-image: url("../img/doubledeep.jpg");
+    background-image: url("../img/doubledeep/doubledeep.JPG");
   }
 
   #item_asrs{
