--- a/src/main/resources/templates/en/index-en.html
+++ b/src/main/resources/templates/en/index-en.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-en :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
 </head>
