--- a/src/main/resources/templates/products/doubledeep.html
+++ b/src/main/resources/templates/products/doubledeep.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Double Deep Racking System</title>
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
     <link th:replace="fragments/fragment-en :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
