--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
 <title>Sản phẩm</title>
+  <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-vn :: style-css">
   <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
