--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -56,7 +56,7 @@ button:hover, button:focus{
   }
 
   #item_asrs{
-    background-image: url("../img/asrs.jpg");
+    background-image: url("../img/ASRS/ASRS.JPG");
   }
 
   #item_cantilever{
