--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -31,7 +31,9 @@
       <a href="doubledeep">
         <button id="item_doubledeep">Double Deep Racking Systems</button>
       </a><br>
-      <button id="item_asrs">AS/RS Racking Systems</button><br>
+      <a href="asrs">
+        <button id="item_asrs">AS/RS Racking Systems</button>
+      </a><br>
       <button id="item_cantilever">Cantilever Racking Systems</button><br>
       <button id="item_mobile">Mobile Racking Systems</button><br>
       <button id="item_mezzanine">Mezzanine</button><br>
