--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -28,8 +28,12 @@
       </a><br>
       <a href="shuttle"><button id="item_shuttle">Kệ trữ hàng dạng shuttle</button>
       </a><br>
-      <button id="item_doubledeep">Kệ trữ hàng dạng ba lết đôi</button><br>
-      <button id="item_asrs">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</button><br>
+      <a href="doubledeep">
+        <button id="item_doubledeep">Kệ trữ hàng dạng ba lết đôi</button>
+      </a><br>
+      <a href="asrs">
+        <button id="item_asrs">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</button>
+      </a><br>
       <button id="item_cantilever">Kệ trữ hàng dạng khuỷu tay</button><br>
       <button id="item_mobile">Kệ trữ hàng dạng di động</button><br>
       <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button><br>
