--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -60,7 +60,7 @@ button:hover, button:focus{
   }
 
   #item_cantilever{
-    background-image: url("../img/cantilever.jpg");
+    background-image: url("../img/cantilever/cantilever.JPG");
   }
 
   #item_boltless{
