--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -34,7 +34,9 @@
       <a href="asrs">
         <button id="item_asrs">AS/RS Racking Systems</button>
       </a><br>
-      <button id="item_cantilever">Cantilever Racking Systems</button><br>
+      <a href="cantilever">
+        <button id="item_cantilever">Cantilever Racking Systems</button>
+      </a><br>
       <button id="item_mobile">Mobile Racking Systems</button><br>
       <button id="item_mezzanine">Mezzanine</button><br>
       <button id="item_platform">Platform</button><br>
