--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -34,7 +34,9 @@
       <a href="asrs">
         <button id="item_asrs">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</button>
       </a><br>
-      <button id="item_cantilever">Kệ trữ hàng dạng khuỷu tay</button><br>
+      <a href="cantilever">
+        <button id="item_cantilever">Kệ trữ hàng dạng khuỷu tay</button>
+      </a><br>
       <button id="item_mobile">Kệ trữ hàng dạng di động</button><br>
       <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button><br>
       <button id="item_platform">Kệ sàn</button><br>
