--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -80,7 +80,7 @@ button:hover, button:focus{
 }
 
 #item_mobile{
-    background-image: url("../img/mobile.jpg");
+    background-image: url("../img/mobile/mobile.JPG");
 }
 
 #item_livestorage{
