--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -37,7 +37,9 @@
       <a href="cantilever">
         <button id="item_cantilever">Kệ trữ hàng dạng khuỷu tay</button>
       </a><br>
-      <button id="item_mobile">Kệ trữ hàng dạng di động</button><br>
+      <a href="mobile">
+        <button id="item_mobile">Kệ trữ hàng dạng di động</button>
+      </a><br>
       <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button><br>
       <button id="item_platform">Kệ sàn</button><br>
       <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button><br>
