--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -37,7 +37,9 @@
       <a href="cantilever">
         <button id="item_cantilever">Cantilever Racking Systems</button>
       </a><br>
-      <button id="item_mobile">Mobile Racking Systems</button><br>
+      <a href="mobile">
+        <button id="item_mobile">Mobile Racking Systems</button>
+      </a><br>
       <button id="item_mezzanine">Mezzanine</button><br>
       <button id="item_platform">Platform</button><br>
       <button id="item_boltless">Boltless Angle Racking Systems</button><br>
