--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -72,7 +72,7 @@ button:hover, button:focus{
   }
 
 #item_mezzanine{
-    background-image: url("../img/mezzanine.jpg");
+    background-image: url("../img/mezzanine/mezzanine.JPG");
 }
 
 #item_platform{
