--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -40,7 +40,9 @@
       <a href="mobile">
         <button id="item_mobile">Mobile Racking Systems</button>
       </a><br>
-      <button id="item_mezzanine">Mezzanine</button><br>
+      <a href="mezzanine">
+        <button id="item_mezzanine">Mezzanine</button>
+      </a><br>
       <button id="item_platform">Platform</button><br>
       <button id="item_boltless">Boltless Angle Racking Systems</button><br>
       <button id="item_mobileshelving">Mobile Shelving Systems</button><br>
