--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -40,7 +40,9 @@
       <a href="mobile">
         <button id="item_mobile">Kệ trữ hàng dạng di động</button>
       </a><br>
-      <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button><br>
+      <a href="mezzanine">
+        <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button>
+      </a><br>
       <button id="item_platform">Kệ sàn</button><br>
       <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button><br>
       <button id="item_mobileshelving">Tủ di động</button><br>
