--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -76,7 +76,7 @@ button:hover, button:focus{
 }
 
 #item_platform{
-    background-image: url("../img/platform.jpg");
+    background-image: url("../img/platform/platform.JPG");
 }
 
 #item_mobile{
