--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -43,7 +43,9 @@
       <a href="mezzanine">
         <button id="item_mezzanine">Mezzanine</button>
       </a><br>
-      <button id="item_platform">Platform</button><br>
+      <a href="platform">
+        <button id="item_platform">Platform</button>
+      </a><br>
       <button id="item_boltless">Boltless Angle Racking Systems</button><br>
       <button id="item_mobileshelving">Mobile Shelving Systems</button><br>
       </ul>
