--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -43,7 +43,9 @@
       <a href="mezzanine">
         <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button>
       </a><br>
-      <button id="item_platform">Kệ sàn</button><br>
+      <a href="platform">
+        <button id="item_platform">Kệ sàn</button>
+      </a><br>
       <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button><br>
       <button id="item_mobileshelving">Tủ di động</button><br>
       </ul>
