--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -64,7 +64,7 @@ button:hover, button:focus{
   }
 
   #item_boltless{
-    background-image: url("../img/boltless.jpg");
+    background-image: url("../img/boltless/boltless.jpg");
   }
 
   #item_mobileshelving{
