--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -46,7 +46,9 @@
       <a href="platform">
         <button id="item_platform">Platform</button>
       </a><br>
-      <button id="item_boltless">Boltless Angle Racking Systems</button><br>
+      <a href="boltless">
+        <button id="item_boltless">Boltless Angle Racking Systems</button>
+      </a><br>
       <button id="item_mobileshelving">Mobile Shelving Systems</button><br>
       </ul>
   </div>
