--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -46,7 +46,9 @@
       <a href="platform">
         <button id="item_platform">Kệ sàn</button>
       </a><br>
-      <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button><br>
+      <a href="boltless">
+        <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button>
+      </a><br>
       <button id="item_mobileshelving">Tủ di động</button><br>
       </ul>
   </div>
