mobile shelving done

--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -68,7 +68,7 @@ button:hover, button:focus{
   }
 
   #item_mobileshelving{
-    background-image: url("../img/mobileshelving.jpg");
+    background-image: url("../img/mobileshelving/mobileshelving.JPG");
   }
 
 #item_mezzanine{
