--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -49,7 +49,9 @@
       <a href="boltless">
         <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button>
       </a><br>
-      <button id="item_mobileshelving">Tủ di động</button><br>
+      <a href="mobileshelving">
+        <button id="item_mobileshelving">Tủ di động</button>
+      </a><br>
       </ul>
   </div>
 </section>
