--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -49,7 +49,9 @@
       <a href="boltless">
         <button id="item_boltless">Boltless Angle Racking Systems</button>
       </a><br>
-      <button id="item_mobileshelving">Mobile Shelving Systems</button><br>
+      <a href="mobileshelving">
+        <button id="item_mobileshelving">Mobile Shelving Systems</button>
+      </a><br>
       </ul>
   </div>
 </section>
