added vn for products

--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -13,43 +13,43 @@
 <section class="products">
   <div>
     <ul class = "items">
-      <a href="selective">
+      <a href="selective-vn">
         <button id="item_selective">Kệ trữ hàng dạng điều chỉnh</button>
       </a><br>
-      <a href="drivein"><button id="item_drivein">Kệ trữ hàng dạng xuyên suốt</button>
+      <a href="drivein-vn"><button id="item_drivein">Kệ trữ hàng dạng xuyên suốt</button>
       </a><br>
-      <a href="narrowaisle"><button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button>
+      <a href="narrowaisle-vn"><button id="item_narrowaisle">Kệ trữ hàng dạng lối đi hẹp</button>
       </a><br>
-      <a href="pushback">
+      <a href="pushback-vn">
         <button id="item_pushback">Kệ trữ hàng dạng đẩy từ phía sau</button>
       </a><br>
-      <a href="livestorage">
+      <a href="livestorage-vn">
         <button id="item_livestorage">Kệ trữ hàng có ba lết dạng trượt</button>
       </a><br>
-      <a href="shuttle"><button id="item_shuttle">Kệ trữ hàng dạng shuttle</button>
+      <a href="shuttle-vn"><button id="item_shuttle">Kệ trữ hàng dạng shuttle</button>
       </a><br>
-      <a href="doubledeep">
+      <a href="doubledeep-vn">
         <button id="item_doubledeep">Kệ trữ hàng dạng ba lết đôi</button>
       </a><br>
-      <a href="asrs">
+      <a href="asrs-vn">
         <button id="item_asrs">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</button>
       </a><br>
-      <a href="cantilever">
+      <a href="cantilever-vn">
         <button id="item_cantilever">Kệ trữ hàng dạng khuỷu tay</button>
       </a><br>
-      <a href="mobile">
+      <a href="mobile-vn">
         <button id="item_mobile">Kệ trữ hàng dạng di động</button>
       </a><br>
-      <a href="mezzanine">
+      <a href="mezzanine-vn">
         <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button>
       </a><br>
-      <a href="platform">
+      <a href="platform-vn">
         <button id="item_platform">Kệ sàn</button>
       </a><br>
-      <a href="boltless">
+      <a href="boltless-vn">
         <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button>
       </a><br>
-      <a href="mobileshelving">
+      <a href="mobileshelving-vn">
         <button id="item_mobileshelving">Tủ di động</button>
       </a><br>
       </ul>
