--- a/src/main/resources/templates/products-vn/boltless-vn.html
+++ b/src/main/resources/templates/products-vn/boltless-vn.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Boltless Angle Racking Systems</title>
+    <title>Kệ trữ hàng dạng không bu lông</title>
     <link rel="icon" type="image/x-icon" href="/img/logo.png">
-    <link th:replace="fragments/fragment-en :: style-css">
+    <link th:replace="fragments/fragment-vn :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
 <body>
-<link th:replace="fragments/fragment-en :: header">
+<link th:replace="fragments/fragment-vn :: header">
 
 <div class="wrapper">
-    <h1>Boltless Angle Racking Systems</h1>
+    <h1>Kệ trữ hàng dạng không bu lông</h1>
 
     <div class="img-area">
         <div class="single-img"><img src="img/boltless/boltless.jpg" alt=""></div>
@@ -25,6 +25,6 @@
     </div>
 </div>
 
-<link th:replace="fragments/fragment-en :: footer">
+<link th:replace="fragments/fragment-vn :: footer">
 </body>
 </html>
