--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -11,8 +11,8 @@
         <h2>J&F Industries International Co., Ltd</h2>
     </div>
     <div class='nav' id="lang">
-        <li><a href="/">English</a></li>
-        <li><a href="home-vn">Vietnamese</a></li>
+        <li><a href="/"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">English</a></li>
+        <li><a href="home-vn"><img src="img/vietnamese.png" alt="vn-flag" class="lang-logo" id="vn-logo">Vietnamese</a></li>
     </div>
     </header>
 
