--- a/src/main/resources/templates/fragments/fragment-vn.html
+++ b/src/main/resources/templates/fragments/fragment-vn.html
@@ -11,8 +11,8 @@
         <h2>CÔNG TY TNHH QUỐC TẾ J&F</h2>
     </div>
     <div class='nav' id="lang">
-        <li><a href="home-en">Tiếng Anh</a></li>
-        <li><a href="home-vn">Tiếng Việt</a></li>
+        <li><a href="home-en"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">Tiếng Anh</a></li>
+        <li><a href="home-vn"><img src="img/vietnamese.png" alt="vn-flag" class="lang-logo" id="vn-logo">Tiếng Việt</a></li>
     </div>
     </header>
 
