--- a/src/main/resources/templates/en/contact-en.html
+++ b/src/main/resources/templates/en/contact-en.html
@@ -27,7 +27,7 @@
 
   <div>
     <h2>Contact Details</h2><br><br>
-      <h4>J&F Industries International Co., Ltd</h4><br>
+      <h3>J&F Industries International Co., Ltd</h3><br><br>
     <h3>Address</h3>
       <p>C2-18, Da Den Industrial Zone, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam</p><br>
     <h3>Contact Us</h3>
@@ -35,6 +35,10 @@
       <p>Mr. Liu: +84-946-766866</p>
       <p>Ms. Wang: +84-946-766889</p>
       <p>E-mail: <a style="color:black" href="mailto:bd@jfrack.com">bd@jfrack.com</a></p>
+
+    <a href="/H-series%20catalogue.pdf" download="J&F Catalogue">
+      <button class="download_catalogue">DOWNLOAD CATALOGUE</button>
+    </a>
   </div>
   </div>
 </section>
