--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -21,7 +21,25 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="about-en">About</a></li>
-            <li><a href="products-en">Products</a></li>
+            <li>
+                <a href="products-en">Products</a>
+                <ul class="dropdown">
+                    <li><a href="selective">Selective Racking Systems</a></li>
+                    <li><a href="drivein">Drive-in Racking Systems</a></li>
+                    <li><a href="narrowaisle">Very Narrow Aisle Racking Systems</a></li>
+                    <li><a href="pushback">Push Back Racking Systems</a></li>
+                    <li><a href="livestorage">Live Storage Racking Systems</a></li>
+                    <li><a href="shuttle">Shuttle Racking Systems</a></li>
+                    <li><a href="doubledeep">Double Deep Racking Systems</a></li>
+                    <li><a href="asrs">AS/RS Racking Systems</a></li>
+                    <li><a href="cantilever">Cantilever Racking Systems</a></li>
+                    <li><a href="mobile">Mobile Racking Systems</a></li>
+                    <li><a href="mezzanine">Mezzanine</a></li>
+                    <li><a href="platform">Platform</a></li>
+                    <li><a href="boltless">Boltless Angle Racking Systems</a></li>
+                    <li><a href="mobileshelving">Mobile Shelving Systems</a></li>
+                </ul>
+            </li>
             <li><a href="contact-en">Contact</a></li>
         </ul>
     </div>
