--- a/src/main/resources/templates/fragments/fragment-vn.html
+++ b/src/main/resources/templates/fragments/fragment-vn.html
@@ -21,7 +21,24 @@
         <ul>
             <li><a href="home-vn">Trang chủ</a></li>
             <li><a href="about-vn">Giới thiệu</a></li>
-            <li><a href="products-vn">Sản phẩm</a></li>
+            <li><a href="products-vn">Sản phẩm</a>
+                <ul class="dropdown">
+                    <li><a href="selective-vn">Kệ trữ hàng dạng điều chỉnh</a></li>
+                    <li><a href="drivein-vn">Kệ trữ hàng dạng xuyên suốt</a></li>
+                    <li><a href="narrowaisle-vn">Kệ trữ hàng dạng lối đi hẹp</a></li>
+                    <li><a href="pushback-vn">Kệ trữ hàng dạng đẩy từ phía sau</a></li>
+                    <li><a href="livestorage-vn">Kệ trữ hàng có ba lết dạng trượt</a></li>
+                    <li><a href="shuttle-vn">Kệ trữ hàng dạng shuttle</a></li>
+                    <li><a href="doubledeep-vn">Kệ trữ hàng dạng ba lết đôi</a></li>
+                    <li><a href="asrs-vn">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</a></li>
+                    <li><a href="cantilever-vn">Kệ trữ hàng dạng khuỷu tay</a></li>
+                    <li><a href="mobile-vn">Kệ trữ hàng dạng di động</a></li>
+                    <li><a href="mezzanine-vn">Kệ trữ hàng dạng nhiều tầng</a></li>
+                    <li><a href="platform-vn">Kệ sàn</a></li>
+                    <li><a href="boltless-vn">Kệ trữ hàng dạng không bu lông</a></li>
+                    <li><a href="mobileshelving-vn">Tủ di động</a></li>
+                </ul>
+            </li>
             <li><a href="contact-vn">Liên hệ</a></li>
         </ul>
     </div>
@@ -42,7 +59,7 @@
     <div class="footer">
         <h3>Địa chỉ</h3>
         <p>
-            Địa chỉ: Lô C2-18, KCN Đại Đăng,<br> phường Phú Tân, thành phố Thủ Dầu Một, <br>tỉnh Bình Dương, Việt Nam
+            Địa chỉ: Lô C2-18, KCN Đại Đăng,<br> Phường Phú Tân, Thành Phố Thủ Dầu Một, <br>Tỉnh Bình Dương, Việt Nam
         </p>
     </div>
 
