--- a/src/main/resources/templates/vn/contact-vn.html
+++ b/src/main/resources/templates/vn/contact-vn.html
@@ -27,14 +27,18 @@
 
   <div>
     <h2>Thông tin liên hệ</h2><br><br>
-      <h4>CÔNG TY TNHH QUỐC TẾ J&F</h4><br>
+      <h3>CÔNG TY TNHH QUỐC TẾ J&F</h3><br><br>
     <h3>Địa chỉ</h3>
-      <p>Lô C2-18, KCN Đại Đăng, phường Phú Tân, <br>thành phố Thủ Dầu Một, tỉnh Bình Dương, Việt Nam</p><br>
+      <p>Lô C2-18, KCN Đại Đăng, Phường Phú Tân, <br>Thành Phố Thủ Dầu Một, Tỉnh Bình Dương, Việt Nam</p><br>
     <h3>Liên hệ</h3>
       <p>Tel: +84-274-3624200</p>
       <p>Mr. Liu: +84-946-766866</p>
       <p>Ms. Wang: +84-946-766889</p>
       <p>E-mail: <a style="color:black" href="mailto:bd@jfrack.com">bd@jfrack.com</a></p>
+
+    <a href="/H-series%20catalogue.pdf" download="J&F Catalogue">
+      <button class="download_catalogue">TẢI MỤC LỤC</button>
+    </a>
   </div>
   </div>
 </section>
