form submit done

--- a/src/main/resources/templates/vn/contact-vn.html
+++ b/src/main/resources/templates/vn/contact-vn.html
@@ -15,13 +15,13 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62660.194286596714!2d106.66181923514571!3d11.018947979438671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174d058f7ba4d6f%3A0x1646825d7a23214b!2sJ%26F%20Company!5e0!3m2!1szh-TW!2suk!4v1639338239934!5m2!1szh-TW!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
   <div class="contact">
-  <form id="contForm">
+  <form id="contForm" action="https://formsubmit.co/96ec9e9ff78dacb5644415762b695dbd" method="POST">
     <h2>Liên hệ</h2>
     <p>Liên hệ với chúng tôi dưới đây</p><br>
-    <input type="text" placeholder="Họ và tên"><br><br>
-    <input type="email" placeholder="email"><br><br>
-    <input type="number" placeholder="Số điện thoại"><br><br>
-    <textarea placeholder="Nhu cầu của bạn"></textarea><br><br>
+    <input type="text" name="tên" placeholder="Họ và tên"><br><br>
+    <input type="email" name="email" placeholder="email"><br><br>
+    <input type="number" name="điện thoại" placeholder="Số điện thoại"><br><br>
+    <textarea name="nhu cầu" placeholder="Nhu cầu của bạn"></textarea><br><br>
     <button type="submit" class="btn">Liên hệ</button><br><br>
   </form>
 
